# tbcoin-engine-ml

./: .bandit  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  .yamllint.yml  API Endpoints for Data Access.py  AUTONOMOUS_AGENT.md  After deployment.txt  Architecture Overview.txt  Blockchain Data Ingestion Service.py  CHANGELOG.md  Calling Contract Methods.sh  Complete Deployment Execution.sh  Continuous Deployment Setup.yaml  Core Backend Services.yaml  DEPLOYMENT.md  DEPRECATION_FIXES.md  Data Processing & Feature Engineering.py  Database Schema for Phase 1.sql  Dockerfile  Dockerfile.api.dockerfile  Dockerfile.ibm.dockerfile  Dockerfile.listener.dockerfile  Dockerfile.ml  Dockerfile.ml.ibm.dockerfile  Environment Configuration.sh  Execution Commands.sh  Expected Free Tier Costs.txt  IBM Cloud Databases (Lowest Cost).sh  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ENHANCED.md  Infrastructure Setup.sh  Instantiating the Contract.sh  Key Performance Indicators.yaml  LIFECYCLE.md  PROJECT_SUMMARY.md  README.md  README_FIRST_USE.md  Requirements Files.txt  (+54 more)
blockchain-ai-system/: Dockerfile  README.md  api.aim.py  blockchain-ai-setup.sh  dashboard-setup.sh  deepseek-setup.sh  install-dashboard.sh  pyproject.toml  requirements.txt  run_api.py  start-ai-blockchain-system.sh
blockchain-ai-system/config/: ai_models.yaml  blockchain_networks.yaml
blockchain-ai-system/dashboard/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
blockchain-ai-system/database/: schema.sql
blockchain-ai-system/docs/: api-overview.md
blockchain-ai-system/src/: __init__.py
blockchain-ai-system/src/ai_models/: __init__.py  feature_engineering.py  predictive_engine.py  training_pipeline.py
blockchain-ai-system/src/api/: __init__.py  app.py  routes.py  server.py  simple_index.py
blockchain-ai-system/src/blockchain/: __init__.py  web3_helpers.py  (+1 more)
blockchain-ai-system/tests/: test_blockchain_ai_system.py  test_price_predictor.py
(+290 files in other folders)
